# smart-house-hardware

./: .env.example  .gitignore  SMART-HOUSE-HARDWARE.code-workspace  build_flags.py  devices.json  load.py  platformio.ini  pyproject.toml  request.py
.github/workflows/: ci.yml
arduino/: platformio.ini
arduino/lib/core/include/: Actuators.h  Core.h  I2C_protocol.h  Messenger.h  Sensors.h
arduino/lib/core/src/: Core.cpp  Gate.cpp  GateGarage.cpp  Ligth.cpp
arduino/src/: alarma.cpp  temperatura.cpp
arduino/src/actuator/: arduino_node.cpp
arduino/src/alarm/: alarma.cpp
arduino/src/temperature/: temperatura.cpp
esp32-actuator/: platformio.ini
esp32-actuator/include/: generated_devices.h  generated_env.h
esp32-actuator/lib/core/include/: Core.h  i2c_protocol.h
esp32-actuator/lib/devices/: actuators.cpp  actuators.h  controller.cpp  controller.h  movement.cpp  movement.h  thermostat.cpp  thermostat.h
esp32-actuator/lib/messaging/: builder.cpp  builder.h
esp32-actuator/src/: main.cpp
lib/core/: Core.cpp  Core.h
lib/core/include/: Core.h  Messenger.h
lib/core/src/: Core.cpp  Gate.cpp  Ligth.cpp
master_esp32/: .gitignore  config.py  devices.json  load_env.py  platformio.ini  pyproject.toml
master_esp32/include/: generated_devices.h
master_esp32/lib/core/include/: Core.h  PinsConfig.h  camera.h  mqtt_handler.h
master_esp32/lib/core/src/: Core.cpp  camera.cpp  mqtt_handler.cpp
master_esp32/src/: main.cpp
scripts/: config.py  defines.py  devices.py  json_secret.py  load_env.py  main.py  settings.py
src/: arduino_node.cpp  esp32_main.cpp
